# pinpoint

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: pinpoint-fixer.md  pinpoint-tracer.md
bench/: README.md  runner.py  scoring.py
bench/fixtures/: README.md
bench/fixtures/02-python-off-by-one/: README.md  answer.json  bug.py  symptom.txt
bench/fixtures/03-python-mutable-default/: README.md  answer.json  bug.py  symptom.txt
bench/fixtures/04-python-async-race/: answer.json  symptom.txt
bench/fixtures/05-python-silent-exception/: README.md  answer.json  symptom.txt
bench/fixtures/06-ts-undefined-call/: bug.ts  symptom.txt
bench/fixtures/07-ts-array-mutation/: README.md  bug.ts  symptom.txt
bench/fixtures/08-ts-promise-not-awaited/: README.md  answer.json  bug.ts  symptom.txt
bench/fixtures/09-ts-wrong-equality/: README.md  answer.json  symptom.txt
bench/fixtures/10-ts-closure-loop/: README.md  bug.ts  symptom.txt
bench/tests/: test_runner.py  test_scoring.py
commands/: trace.md
docs/superpowers/plans/: 2026-05-03-pinpoint.md
docs/superpowers/specs/: 2026-05-03-pinpoint-design.md
plugins/pinpoint/bench/fixtures/01-python-typeerror/: README.md  answer.json  bug.py  symptom.txt
plugins/pinpoint/bench/fixtures/04-python-async-race/: README.md  bug.py
plugins/pinpoint/bench/fixtures/05-python-silent-exception/: bug.py
skills/pinpoint-nudge/: SKILL.md
tests/: test_agents.py  test_commands.py  test_fixtures.py  test_manifest.py  test_skills.py
(+5 files in other folders)
