[project]
name = "pinpoint-bench"
version = "0.1.0"
description = "Benchmark harness for the Pinpoint Claude Code plugin"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3"]

[tool.pytest.ini_options]
testpaths = ["tests", "plugins/pinpoint/bench/tests"]
pythonpath = [".", "plugins/pinpoint"]
